# trisul-ai-cli

./: .gitignore  MANIFEST.in  README.md  setup.cfg
trisul_ai_cli/: cli.py  client.py  llm_factory.py  server.py  trp_pb2.py
trisul_ai_cli/prompts/: system_main.txt  system_memory_update.txt
trisul_ai_cli/tools/: json_to_toon_converter.py  pdf_to_chroma_ingest.py  utils.py
