[metadata]
name = trisul_ai_cli
version = 0.1.0
description = Trisul AI CLI that starts a local MCP server and a client.
long_description = file: README.md
long_description_content_type = text/markdown
author = Parthasarathy B
author-email = partha@unleashnetworks.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    httpx
    nest_asyncio
    mcp
    google-generativeai
    chromadb
    pyzmq
    protobuf
    requests
    matplotlib
    python-dotenv

[options.package_data]
trisul_ai_cli =
    chroma_store/*
    chroma_store/**/*

[options.entry_points]
console_scripts =
    trisul_ai_cli = trisul_ai_cli.cli:cli_main


