[metadata]
name = trisul_ai_cli
version = 0.2.0
description = Trisul AI CLI that starts a local MCP server and a client.
long_description = file: README.md
long_description_content_type = text/markdown
author = Parthasarathy B
author-email = partha@unleashnetworks.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    nest_asyncio
    mcp
    chromadb
    pyzmq
    protobuf
    matplotlib
    python-dotenv
    reportlab
    stdiomask
    google-generativeai
    langchain
    langchain-google-genai
    langchain-openai
    langchain-anthropic
    langchain-community
    voyageai


[options.package_data]
trisul_ai_cli =
    chroma_store/*
    chroma_store/**/*
    trisul_ai_memory.json
    assets/*
    assets/**/*

[options.entry_points]
console_scripts =
    trisul_ai_cli = trisul_ai_cli.cli:cli_main


